--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "time-grunt": "~1.0.0",
         "grunt-contrib-watch": "~0.6.1",
         "grunt-browserify": "~3.8.0",
-        "grunt-contrib-handlebars": "*",
-        "jquery": "*"
+        "grunt-contrib-handlebars": "~0.10.2",
+        "jquery": "*",
+        "handlebars": "~3.0.3"
     }
 }
